Theme spacing fixes

--- a/_static/theme-overrides.css
+++ b/_static/theme-overrides.css
@@ -111,13 +111,18 @@ blockquote  p {
 
 
 pre.literal-block code {
-	padding: 2px 4px;
-	font-size: 90%;
-	color: #c7254e;
-	white-space: nowrap;
-	background-color: #f9f2f4;
-	border-radius: 4px;
+    padding: 2px 4px;
+    font-size: 90%;
+    color: #c7254e;
+    white-space: nowrap;
+    background-color: #f9f2f4;
+    border-radius: 4px;
 }
+
+pre.literal-block ul {
+    margin-top: -10px;
+    margin-bottom: -10px;
+} 
 
 pre.literal-block p {
     margin: 0px;
